feat: modernize TalexSoulTech runtime and gameplay