@@ -1,344 +1,256 @@
 package pubsher.talexsoultech.utils;
 
-import com.comphenix.protocol.utility.StreamSerializer;
-import net.minecraft.server.v1_12_R1.NBTTagCompound;
-import org.bukkit.*;
+import org.bukkit.Bukkit;
+import org.bukkit.Color;
+import org.bukkit.Location;
+import org.bukkit.Material;
+import org.bukkit.NamespacedKey;
+import org.bukkit.Registry;
+import org.bukkit.World;
 import org.bukkit.configuration.file.YamlConfiguration;
-import org.bukkit.craftbukkit.libs.jline.internal.Nullable;
-import org.bukkit.craftbukkit.v1_12_R1.inventory.CraftItemStack;
 import org.bukkit.enchantments.Enchantment;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.LeatherArmorMeta;
+import org.bukkit.persistence.PersistentDataContainer;
+import org.bukkit.persistence.PersistentDataType;
 
 import java.nio.charset.StandardCharsets;
-import java.util.*;
+import java.util.Base64;
+import java.util.List;
+import java.util.Locale;
+import java.util.Set;
+import java.util.concurrent.ThreadLocalRandom;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
-public class NBTsUtil {
+public final class NBTsUtil {
 
-    public static Enchantment matchEnchantment(String str) {
+    private static final String NAMESPACE = "talexsoultech";
 
-        Enchantment en = Enchantment.getByName(str);
-        if ( en == null ) {
+    private NBTsUtil() {
+    }
 
-            return Enchantment.getById(Integer.parseInt(str));
-
+    public static Enchantment matchEnchantment(String value) {
+        NamespacedKey key = NamespacedKey.fromString(value.toLowerCase(Locale.ROOT));
+        if (key == null) {
+            key = NamespacedKey.minecraft(value.toLowerCase(Locale.ROOT));
         }
-
-        return en;
-
+        Enchantment enchantment = Registry.ENCHANTMENT.get(key);
+        if (enchantment == null) {
+            throw new IllegalArgumentException("Unknown enchantment: " + value);
+        }
+        return enchantment;
     }
 
-    public static boolean isMinecraftOriginSimilar(ItemStack obj1, ItemStack obj2) {
-
-        return obj1.getType() == obj2.getType();
-
+    public static boolean isMinecraftOriginSimilar(ItemStack first, ItemStack second) {
+        return first != null && second != null && first.getType() == second.getType();
     }
 
-    public static boolean isSimilar(ItemStack obj1, ItemStack obj2) {
-
-        ItemStack stack1 = obj1.clone();
-        ItemStack stack2 = obj2.clone();
-
-        stack1.setAmount(1);
-        stack2.setAmount(1);
-
-        //Bukkit.broadcastMessage("Similar: " + stack1.isSimilar(stack2) );
-
-        return stack1.isSimilar(stack2);
-
+    public static boolean isSimilar(ItemStack first, ItemStack second) {
+        if (first == null || second == null) {
+            return false;
+        }
+        ItemStack firstCopy = first.clone();
+        ItemStack secondCopy = second.clone();
+        firstCopy.setAmount(1);
+        secondCopy.setAmount(1);
+        return firstCopy.isSimilar(secondCopy);
     }
 
     public static boolean nameHasKey(ItemStack stack, String key) {
-
-        if ( stack == null || Objects.requireNonNull(stack).getItemMeta().getDisplayName() == null ) {
+        if (stack == null || !stack.hasItemMeta()) {
             return false;
         }
-
-        return stack.getItemMeta().getDisplayName().contains(key.replace("&", "§"));
-
+        ItemMeta meta = stack.getItemMeta();
+        return meta.hasDisplayName() && meta.getDisplayName().contains(key.replace('&', '§'));
     }
 
     public static String ItemData(ItemStack item) {
-
-        StreamSerializer data = new StreamSerializer();
-
-        String s;
-        try {
-            s = data.serializeItemStack(item);
-        } catch ( Exception var5 ) {
-            s = null;
-        }
-
-        return s;
+        return item == null ? null : Base64.getEncoder().encodeToString(item.serializeAsBytes());
     }
 
-    public static boolean stackIsType(ItemStack stack, String type, String compare) {
-
-        if ( stack == null ) {
-            return false;
-        }
-
-        if ( hasTag(stack, type) ) {
-            return false;
-        }
-
-        return compare.equalsIgnoreCase(getTag(stack, type));
-
+    public static boolean stackIsType(ItemStack stack, String key, String expectedValue) {
+        return hasTag(stack, key) && expectedValue.equalsIgnoreCase(getTag(stack, key));
     }
 
     public static ItemStack GetItemStack(String data) {
-
-        if ( data == null || "".equalsIgnoreCase(data) ) {
+        if (data == null || data.isBlank()) {
             return null;
         }
-
-        StreamSerializer item = new StreamSerializer();
-
         try {
-            return item.deserializeItemStack(data);
-        } catch ( Exception var3 ) {
-            var3.printStackTrace();
+            return ItemStack.deserializeBytes(Base64.getDecoder().decode(data));
+        } catch (IllegalArgumentException exception) {
             return null;
         }
     }
 
     public static ItemStack getItemStackFromConfig(YamlConfiguration yaml, String path) {
-
-        ItemStack stack = new ItemStack(matchMaterial(yaml.getString(path + ".type", "0")));
+        ItemStack stack = new ItemStack(matchMaterial(yaml.getString(path + ".type", "BARRIER")));
         ItemMeta meta = stack.getItemMeta();
-        String name = yaml.getString(path + ".name", "");
-        int data = yaml.getInt(path + ".data");
-        List<String> lore = yaml.getStringList(path + ".lore");
-        String lores = String.join("©", lore).replace("&", "§");
-        lore = Arrays.asList(lores.split("©"));
-        meta.setDisplayName(name.replace("&", "§"));
-        meta.setLore(lore);
+        meta.setDisplayName(yaml.getString(path + ".name", "").replace('&', '§'));
+        meta.setLore(yaml.getStringList(path + ".lore").stream()
+                .map(line -> line.replace('&', '§'))
+                .toList());
 
-        if ( yaml.contains(path + ".enchants") ) {
-
-            List<String> enchants = yaml.getStringList(path + ".enchants");
-
-            for ( String enchant : enchants ) {
-
-                String[] args = enchant.split(":");
-                if ( args.length != 2 ) {
-
-                    Bukkit.broadcastMessage("§cError: §e" + path + " - ENCHANT: " + enchant);
-                    continue;
-
-                }
-
-                meta.addEnchant(matchEnchantment(args[0]), Integer.parseInt(args[1]), true);
-
+        for (String encodedEnchant : yaml.getStringList(path + ".enchants")) {
+            String[] parts = encodedEnchant.split(":", 2);
+            if (parts.length == 2) {
+                meta.addEnchant(matchEnchantment(parts[0]), Integer.parseInt(parts[1]), true);
             }
-
         }
 
         stack.setItemMeta(meta);
-
-        if ( yaml.contains(path + ".color") && stack.getType().name().contains("LEATHER") ) {
-
-            LeatherArmorMeta lam = (LeatherArmorMeta) stack.getItemMeta();
-            String[] rgbs = yaml.getString(path + ".color").split(",");
-            if ( rgbs.length == 3 ) {
-
-                lam.setColor(Color.fromRGB(Integer.parseInt(rgbs[0]), Integer.parseInt(rgbs[1]), Integer.parseInt(rgbs[2])));
-                stack.setItemMeta(lam);
-
+        if (yaml.contains(path + ".color") && stack.getItemMeta() instanceof LeatherArmorMeta leatherMeta) {
+            String[] channels = yaml.getString(path + ".color").split(",", 3);
+            if (channels.length == 3) {
+                leatherMeta.setColor(Color.fromRGB(Integer.parseInt(channels[0]), Integer.parseInt(channels[1]), Integer.parseInt(channels[2])));
+                stack.setItemMeta(leatherMeta);
             }
-
         }
 
-        stack.setDurability((short) data);
-
-        if ( yaml.contains(path + ".nbt") ) {
-
-            List<String> nbts = yaml.getStringList(path + ".nbt");
-            for ( String nbt : nbts ) {
-
-                String[] args = nbt.split("@");
-                if ( args.length != 2 ) {
-
-                    Bukkit.broadcastMessage("§cError: §e" + path + " - NBT: " + nbt);
-                    continue;
-
-                }
-                stack = addTag(stack, args[0], args[1]);
-
+        for (String encodedTag : yaml.getStringList(path + ".nbt")) {
+            String[] parts = encodedTag.split("@", 2);
+            if (parts.length == 2) {
+                stack = addTag(stack, parts[0], parts[1]);
             }
-
         }
-
         return stack;
     }
 
     public static Material matchMaterial(String material) {
+        Material matched = Material.matchMaterial(material);
+        return matched == null ? Material.BARRIER : matched;
+    }
 
-        Material m = Material.matchMaterial(material);
-        if ( m == null ) {
-            m = Material.getMaterial(material);
-            if ( m == null ) {
-                m = Material.getMaterial(material);
-                if ( m == null ) {
-                    return Material.BARRIER;
-                }
-            }
+    public static String Base64_Encode(String value) {
+        return Base64.getEncoder().encodeToString(value.getBytes(StandardCharsets.UTF_8));
+    }
+
+    public static String Base64_Decode(String value) {
+        return new String(Base64.getDecoder().decode(value), StandardCharsets.UTF_8);
+    }
+
+    public static String getRandomStr(int length) {
+        String alphabet = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
+        StringBuilder value = new StringBuilder(length);
+        ThreadLocalRandom random = ThreadLocalRandom.current();
+        for (int index = 0; index < length; index++) {
+            value.append(alphabet.charAt(random.nextInt(alphabet.length())));
         }
-
-        return m;
+        return value.toString();
     }
 
-    public static String Base64_Encode(String str) {
-
-        return Base64.getEncoder().encodeToString(str.getBytes(StandardCharsets.UTF_8));
-
+    public static Location String2Location(String value) {
+        return getLocation(value);
     }
 
-    @Nullable
-    public static String Base64_Decode(String str) {
-
-        return new String(Base64.getDecoder().decode(str.getBytes(StandardCharsets.UTF_8)));
-
-    }
-
-    /**
-     * 获取随机字符串，由数字、大小写字母组成
-     *
-     * @param bytes：生成的字符串的位数
-     *
-     * @return String: 返回生成的字符串
-     *
-     * @author TalexDreamSoul
-     */
-    public static String getRandomStr(int bytes) {
-
-        StringBuilder sb = new StringBuilder();
-        Random random = new Random();
-        for ( int i = 0; i < bytes; i++ ) {
-            //随机判断判断该字符是数字还是字母
-
-            if ( random.nextInt(2) % 2 == 0 ) {
-                sb.append((char) ( random.nextInt(2) % 2 == 0 ? 65 : 97 + random.nextInt(26) ));
-            } else {
-                sb.append(random.nextInt(10));
-            }
-
-        }
-        return sb.toString();
-    }
-
-    public static Location String2Location(String loc) {
-
-        return getLocation(loc);
-
-    }
-
-    public static Location getLocation(String loc) {
-
-        int a = loc.indexOf(":") + 1;
-        int b = loc.indexOf("@", a);
-        String locs = loc.substring(a, b);
-
-        String[] args = locs.split(",");
-        if ( args.length != 3 ) {
+    public static Location getLocation(String value) {
+        if (value == null || !value.startsWith("[Location:") || !value.endsWith("]")) {
             return null;
         }
-
-        String world = loc.substring(b + 1, loc.lastIndexOf("]"));
-        World world2 = Bukkit.getWorld(world);
-
-        return new Location(world2, Double.parseDouble(args[0]), Double.parseDouble(args[1]), Double.parseDouble(args[2]));
+        int separator = value.indexOf('@');
+        if (separator < 0) {
+            return null;
+        }
+        String[] coordinates = value.substring(10, separator).split(",", 3);
+        if (coordinates.length != 3) {
+            return null;
+        }
+        World world = Bukkit.getWorld(value.substring(separator + 1, value.length() - 1));
+        if (world == null) {
+            return null;
+        }
+        return new Location(world, Double.parseDouble(coordinates[0]), Double.parseDouble(coordinates[1]), Double.parseDouble(coordinates[2]));
     }
 
-    public static String Location2String(Location loc) {
-
-        return "[Location:" + loc.getX() + "," + loc.getY() + "," + loc.getZ() + "@" + loc.getWorld().getName() + "]";
-
+    public static String Location2String(Location location) {
+        if (location == null || location.getWorld() == null) {
+            throw new IllegalArgumentException("Location must have a world");
+        }
+        return "[Location:" + location.getX() + "," + location.getY() + "," + location.getZ() + "@" + location.getWorld().getName() + "]";
     }
 
     public static ItemStack removeTag(ItemStack stack, String key) {
-
-        net.minecraft.server.v1_12_R1.ItemStack nmsItem = CraftItemStack.asNMSCopy(stack);
-        NBTTagCompound tag = nmsItem.hasTag() ? nmsItem.getTag() : ( new NBTTagCompound() );
-
-        assert tag != null;
-        tag.remove(key);
-
-        nmsItem.setTag(tag);
-
-        return CraftItemStack.asBukkitCopy(nmsItem);
-
+        return updateTag(stack, key, null);
     }
 
     public static ItemStack clearTags(ItemStack stack) {
-
-        net.minecraft.server.v1_12_R1.ItemStack nmsItem = CraftItemStack.asNMSCopy(stack);
-
-        nmsItem.setTag(null);
-
-        return CraftItemStack.asBukkitCopy(nmsItem);
-
+        if (stack == null || !stack.hasItemMeta()) {
+            return stack;
+        }
+        ItemMeta meta = stack.getItemMeta();
+        PersistentDataContainer data = meta.getPersistentDataContainer();
+        data.getKeys().stream()
+                .filter(key -> key.getNamespace().equals(NAMESPACE))
+                .toList()
+                .forEach(data::remove);
+        stack.setItemMeta(meta);
+        return stack;
     }
 
     public static boolean hasTag(ItemStack stack, String key) {
-
-        net.minecraft.server.v1_12_R1.ItemStack nmsItem = CraftItemStack.asNMSCopy(stack);
-        NBTTagCompound tag = nmsItem.hasTag() ? nmsItem.getTag() : ( new NBTTagCompound() );
-
-        assert tag != null;
-        return !tag.hasKey(key);
-
+        if (stack == null || !stack.hasItemMeta()) {
+            return false;
+        }
+        return stack.getItemMeta().getPersistentDataContainer().has(tagKey(key), PersistentDataType.STRING);
     }
 
     public static String getTag(ItemStack stack, String key) {
-
-        net.minecraft.server.v1_12_R1.ItemStack nmsItem = CraftItemStack.asNMSCopy(stack);
-        NBTTagCompound tag = nmsItem.hasTag() ? nmsItem.getTag() : ( new NBTTagCompound() );
-
-        assert tag != null;
-        return tag.getString(key);
-
+        if (stack == null || !stack.hasItemMeta()) {
+            return "";
+        }
+        String value = stack.getItemMeta().getPersistentDataContainer().get(tagKey(key), PersistentDataType.STRING);
+        return value == null ? "" : value;
     }
 
-    public static List<String> getTagList(ItemStack stack, String key, String customSplit) {
-
-        String str = getTag(stack, key);
-
-        return new ArrayList<>(Arrays.asList(str, customSplit));
-
+    public static List<String> getTagList(ItemStack stack, String key, String delimiter) {
+        String value = getTag(stack, key);
+        return value.isEmpty() ? List.of() : List.of(value.split(Pattern.quote(delimiter)));
     }
 
     public static List<String> getTagList(ItemStack stack, String key) {
-
         return getTagList(stack, key, "™");
-
     }
 
-    public static ItemStack addTag(ItemStack stack, String key, List<String> value, String customSplit) {
-
-        return addTag(stack, key, String.join(customSplit, value));
-
+    public static ItemStack addTag(ItemStack stack, String key, List<String> value, String delimiter) {
+        return addTag(stack, key, String.join(delimiter, value));
     }
 
     public static ItemStack addTag(ItemStack stack, String key, List<String> value) {
-
         return addTag(stack, key, value, "™");
-
     }
 
     public static ItemStack addTag(ItemStack stack, String key, String value) {
-
-        net.minecraft.server.v1_12_R1.ItemStack nmsItem = CraftItemStack.asNMSCopy(stack);
-        NBTTagCompound tag = nmsItem.hasTag() ? nmsItem.getTag() : ( new NBTTagCompound() );
-
-        assert tag != null;
-        tag.setString(key, value);
-
-        nmsItem.setTag(tag);
-
-        return CraftItemStack.asBukkitCopy(nmsItem);
-
+        return updateTag(stack, key, value);
     }
 
+    public static Set<NamespacedKey> getTagKeys(ItemStack stack) {
+        if (stack == null || !stack.hasItemMeta()) {
+            return Set.of();
+        }
+        return stack.getItemMeta().getPersistentDataContainer().getKeys().stream()
+                .filter(key -> key.getNamespace().equals(NAMESPACE))
+                .collect(Collectors.toUnmodifiableSet());
+    }
+
+    private static ItemStack updateTag(ItemStack stack, String key, String value) {
+        if (stack == null) {
+            return null;
+        }
+        ItemMeta meta = stack.getItemMeta();
+        PersistentDataContainer data = meta.getPersistentDataContainer();
+        NamespacedKey namespacedKey = tagKey(key);
+        if (value == null) {
+            data.remove(namespacedKey);
+        } else {
+            data.set(namespacedKey, PersistentDataType.STRING, value);
+        }
+        stack.setItemMeta(meta);
+        return stack;
+    }
+
+    private static NamespacedKey tagKey(String key) {
+        return new NamespacedKey(NAMESPACE, key.toLowerCase(Locale.ROOT).replaceAll("[^a-z0-9/._-]", "_"));
+    }
 }
